src/bindings.rs

#[test]
fn bindgen_test_layout_pt_packet_vmcs() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_vmcs>(),
        8usize,
        concat!("Size of: ", stringify!(pt_packet_vmcs))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_vmcs>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_packet_vmcs))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_vmcs>())).base as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_vmcs),
            "::",
            stringify!(base)
        )
    );
}
#[doc = " A MNT packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_mnt {
    #[doc = " The raw payload."]
    pub payload: u64,
}
#[test]
fn bindgen_test_layout_pt_packet_mnt() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_mnt>(),
        8usize,
        concat!("Size of: ", stringify!(pt_packet_mnt))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_mnt>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_packet_mnt))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_mnt>())).payload as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_mnt),
            "::",
            stringify!(payload)
        )
    );
}
#[doc = " A EXSTOP packet."]
#[repr(C)]
#[repr(align(4))]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_exstop {
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
    pub __bindgen_padding_0: [u8; 3usize],
}
#[test]
fn bindgen_test_layout_pt_packet_exstop() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_exstop>(),
        4usize,
        concat!("Size of: ", stringify!(pt_packet_exstop))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_exstop>(),
        4usize,
        concat!("Alignment of ", stringify!(pt_packet_exstop))
    );
}
impl pt_packet_exstop {
    #[inline]
    pub fn ip(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_ip(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(ip: u32) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let ip: u32 = unsafe { ::std::mem::transmute(ip) };
            ip as u64
        });
        __bindgen_bitfield_unit
    }
}
#[doc = " A MWAIT packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_mwait {
    #[doc = " The MWAIT hints (EAX)."]
    pub hints: u32,
    #[doc = " The MWAIT extensions (ECX)."]
    pub ext: u32,
}
#[test]
fn bindgen_test_layout_pt_packet_mwait() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_mwait>(),
        8usize,
        concat!("Size of: ", stringify!(pt_packet_mwait))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_mwait>(),
        4usize,
        concat!("Alignment of ", stringify!(pt_packet_mwait))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_mwait>())).hints as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_mwait),
            "::",
            stringify!(hints)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_mwait>())).ext as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_mwait),
            "::",
            stringify!(ext)
        )
    );
}
#[doc = " A PWRE packet."]
#[repr(C)]
#[repr(align(4))]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_pwre {
    #[doc = " The resolved thread C-state."]
    pub state: u8,
    #[doc = " The resolved thread sub C-state."]
    pub sub_state: u8,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
    pub __bindgen_padding_0: [u8; 5usize],
}
#[test]
fn bindgen_test_layout_pt_packet_pwre() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_pwre>(),
        8usize,
        concat!("Size of: ", stringify!(pt_packet_pwre))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_pwre>(),
        4usize,
        concat!("Alignment of ", stringify!(pt_packet_pwre))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_pwre>())).state as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_pwre),
            "::",
            stringify!(state)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_pwre>())).sub_state as *const _ as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_pwre),
            "::",
            stringify!(sub_state)
        )
    );
}
impl pt_packet_pwre {
    #[inline]
    pub fn hw(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_hw(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(hw: u32) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let hw: u32 = unsafe { ::std::mem::transmute(hw) };
            hw as u64
        });
        __bindgen_bitfield_unit
    }
}
#[doc = " A PWRX packet."]
#[repr(C)]
#[repr(align(4))]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_pwrx {
    #[doc = " The core C-state at the time of the wake."]
    pub last: u8,
    #[doc = " The deepest core C-state achieved during sleep."]
    pub deepest: u8,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
    pub __bindgen_padding_0: [u8; 5usize],
}
#[test]
fn bindgen_test_layout_pt_packet_pwrx() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_pwrx>(),
        8usize,
        concat!("Size of: ", stringify!(pt_packet_pwrx))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_pwrx>(),
        4usize,
        concat!("Alignment of ", stringify!(pt_packet_pwrx))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_pwrx>())).last as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_pwrx),
            "::",
            stringify!(last)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_pwrx>())).deepest as *const _ as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_pwrx),
            "::",
            stringify!(deepest)
        )
    );
}
impl pt_packet_pwrx {
    #[inline]
    pub fn interrupt(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_interrupt(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn store(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_store(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn autonomous(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_autonomous(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        interrupt: u32,
        store: u32,
        autonomous: u32,
    ) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let interrupt: u32 = unsafe { ::std::mem::transmute(interrupt) };
            interrupt as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let store: u32 = unsafe { ::std::mem::transmute(store) };
            store as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let autonomous: u32 = unsafe { ::std::mem::transmute(autonomous) };
            autonomous as u64
        });
        __bindgen_bitfield_unit
    }
}
#[doc = " A PTW packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_ptw {
    #[doc = " The raw payload."]
    pub payload: u64,
    #[doc = " The payload size as encoded in the packet."]
    pub plc: u8,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
    pub __bindgen_padding_0: [u16; 3usize],
}
#[test]
fn bindgen_test_layout_pt_packet_ptw() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_ptw>(),
        16usize,
        concat!("Size of: ", stringify!(pt_packet_ptw))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_ptw>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_packet_ptw))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_ptw>())).payload as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_ptw),
            "::",
            stringify!(payload)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_ptw>())).plc as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_ptw),
            "::",
            stringify!(plc)
        )
    );
}
impl pt_packet_ptw {
    #[inline]
    pub fn ip(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_ip(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(ip: u32) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let ip: u32 = unsafe { ::std::mem::transmute(ip) };
            ip as u64
        });
        __bindgen_bitfield_unit
    }
}
#[doc = " An unknown packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_unknown {
    #[doc = " Pointer to the raw packet bytes."]
    pub packet: *const u8,
    #[doc = " Optional pointer to a user-defined structure."]
    pub priv_: *mut ::std::os::raw::c_void,
}
